@startuml

class House {

  + getRoomByName(...) : Room
  + getRoomList() : List<Room>
}

class GetRoomListController {
    - house : House

    + GetRoomListController()
    + getRoomList() : List<RoomDTO>
}

class GetDeviceListController {
    - house : House

    + GetDeviceListController()
    + getDeviceList() : List<DeviceDTO>
}

class GetDeviceListFromSpecificRoomController {
    - house : House

    + GetDeviceListFromSpecificRoomController(...)
    + getRoomList() : List<RoomDTO>
    + getDeviceList(...) : List<DeviceDTO>
}

class MapperToRoomDTO {

    + MapperToRoomDTO()
    + getRoomList(...) : List<RoomDTO>
    - toRoomDTO(...) : RoomDTO
}

class MapperToDeviceDTO {

    + MapperToDeviceDTO()
    + getDeviceList(...) : List<DeviceDTO>
    - toDeviceDTO(...) : DeviceDTO
}

class RoomDTO {
    - name : String
    - floor : int
    - width : double
    - length : double
    - height : double

    + RoomDTO(...)
    + getName() : String
    + getFloor() : int
    + getWidth() : double
    + getLength() : double
    + getHeight() : double
}

class DeviceDTO {
    - name : String
    - type : String
    - location : String

    + DeviceDTO(...)
    + getName() : String
    + getType() : String
    + getLocation() : String
}

class Room {
    - name : String
    - floor : int

    + Room(...)
    + getName() : String
    + getFloor() : int
    + getDimensions() : Dimensions
    + getDeviceList() : List<Device>
    + getDeviceByName(...) : Device
}

class Device {
    - name : String
    - type : String

    + getName() : String
    + getType() : String
}

class Dimensions {
    - width : double
    - length : double
    - height : double

    + getWidth() : double
    + getLength() : double
    + getHeight() : double
}

GetDeviceListFromSpecificRoomController "1" --> "1" GetRoomListController : uses
GetRoomListController "1" ---> "1" House : uses
GetRoomListController "1" --> "1" MapperToRoomDTO : creates
MapperToRoomDTO "1" --> "List<RoomDTO>" RoomDTO : creates
GetDeviceListFromSpecificRoomController "1" --> "1" GetDeviceListController : uses
GetDeviceListController "1" --> "1" House : uses
GetDeviceListController "1" --> "1" Room : uses
GetDeviceListController "1" --> "1" MapperToDeviceDTO : creates
MapperToDeviceDTO "1" --> "List<DeviceDTO>" DeviceDTO : creates
Room "1" *--> "1" Dimensions : has
House "1" *--> "List<Room>" Room : contains
Room "1" *--> "List<Device>" Device : contains

@enduml